08/proj1/bar-dep-svc.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dep-bar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - image: whatwant/node-web:2.0
        name: bar-container
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: svc-bar
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8080
  selector:
    app: bar
