08/proj1/vhost-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
#  annotations:
#    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: svc-foo
            port:
              number: 8000
  - host: bar.foo.com
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: svc-bar
            port:
              number: 8001
